--- a/demo.html
+++ b/demo.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Trailer &mdash; The Ultimate Railroad Diagram Generator</title>
-<script src="jquery-2.2.3.min.js"></script>
+<script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
 <script src="trailer-1.0.0.min.js"></script>
 <link rel="stylesheet" href="trailer.css">
 <script>	
